--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,9 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.3",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3",
+    "nodemon": "^3.0.1",
     "socket.io": "^4.6.2"
   }
 }
