--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.3",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.6.2"
+    "path": "^0.12.7",
+    "socket.io": "^4.6.2",
+    "util": "^0.12.5"
   }
 }
