--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
+    "cron": "nodemon utils/cron.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
