--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "he": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.3",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "socket.io": "^4.6.2",
+    "universal-analytics": "^0.5.3",
     "util": "^0.12.5"
   }
 }
