--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "he": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.3",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3",
