--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csgo-fade-percentage-calculator": "^1.1.4",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
+    "get-steam-inventory": "^2.0.0",
     "he": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.3",
